[package]
name = "paoglyph"
description = "Fast, simple 2D text rendering for wgpu"
version = "0.10.0"
edition = "2024"
license = "MIT OR Apache-2.0 OR Zlib"

[dependencies]
wgpu = { version = "28.0.0", default-features = false, features = ["wgsl"] }
etagere = "0.2.15"
cosmic-text = "0.18.2"
lru = { version = "0.16.3", default-features = false }
rustc-hash = "2.1.1"

[dev-dependencies]
winit = "0.30.13"
wgpu = "28.0.0"
resvg = { version = "0.47.0", default-features = false }
pollster = "0.4.0"
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "prepare"
harness = false
